--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
 
 html, body {
     font-size: 62.5%;
+    font-family: 'Roboto', sans-serif;
+    font-weight: normal;
 }
 
 img {
@@ -31,12 +33,19 @@ ul > li {
     padding-top: 2.3rem;
     padding-bottom: 2.6rem;
     color: #ffffff;
+    font-weight: 500;
+    font-size: 1.5rem;
+    line-height: 63%;
 }
 
 .header__wrap {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.header__inst span {
+    line-height: 100%;
 }
 
 .header__telephone-img {
@@ -67,6 +76,91 @@ ul > li {
     align-items: center;
 }
 
+.main-display {
+    padding-top: 4.7rem;
+}
+
+.main-display__top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.main-display__logo {
+    display: flex;
+    align-items: center;
+}
+
+.main-display__logo-img {
+    width: 10rem;
+    height: 6rem;
+    margin-right: 1.1rem;
+}
+
+.main-display__title {
+    font-style: italic;
+    font-weight: 900;
+    font-size: 3.6rem;
+    line-height: 117%;
+}
+
+.main-display__nav {
+    display: flex;
+}
+
+.main-display__nav li {
+    font-weight: 300;
+    font-size: 1.8rem;
+    line-height: 117%;
+}
+
+.main-display__nav li:not(:last-child) {
+    margin-right: 2.5rem;
+}
+
+.main-display__center {
+    display: flex;
+    justify-content: space-between;
+}
+
+.main-display__left {
+    padding-top: 19rem;
+}
+
+.main-display__header {
+    margin-bottom: 2rem;
+    font-weight: 900;
+    font-size: 5rem;
+    line-height: 118%;
+    margin: 0;
+}
+
+.main-display__subheader {
+    margin-bottom: 2rem;
+    font-weight: 300;
+    font-size: 2.4rem;
+    line-height: 117%;
+}
+
+.main-display__button {
+    font-weight: 900;
+    font-size: 2rem;
+    line-height: 115%;
+    color: #ffffff;
+    outline: none;
+    text-align: center;
+    padding: 1.5rem 3rem;
+    background: linear-gradient(95.2deg, #B90160 2.23%, #2E3192 99.51%);
+    border-radius: .7rem;
+    cursor: pointer;
+    text-transform: uppercase;
+}
+
+.main-display__right {
+    width: 53.3rem;
+    height: 68.8rem;
+}
+
 .footer {
     position: relative;
 }
@@ -78,8 +172,17 @@ ul > li {
     padding: 17.2rem 12rem 8.4rem 12rem;
 }
 
+.footer__wrap li {
+    font-weight: 300;
+    font-size: 1.4rem;
+    line-height: 114%;
+}
+
 .footer__header {
     margin-bottom: 1rem;
+    font-weight: 700;
+    font-size: 1.4rem;
+    line-height: 114%;
 }
 
 .footer__inst-img {
