--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,16 @@ ul > li {
     list-style: none;
 }
 
+h1,
+h2,
+h3,
+h4, 
+h5,
+h6 {
+    padding: 0;
+    margin: 0;
+}
+
 .container {
     width: 120rem;
     margin: 0 auto;
@@ -132,7 +142,6 @@ ul > li {
     font-weight: 900;
     font-size: 5rem;
     line-height: 118%;
-    margin: 0;
 }
 
 .main-display__subheader {
@@ -170,6 +179,64 @@ ul > li {
     justify-content: space-between;
     align-items: center;
     padding: 17.2rem 12rem 8.4rem 12rem;
+}
+
+.about__items {
+    /* display: flex;
+    justify-content: space-between; */
+    display: grid;
+    grid-template-columns: repeat(3, 29%);
+    gap: 0 7rem;
+}
+
+.about__item {
+    /* width: 29%; */
+    box-shadow: 0 0 40px rgba(184, 0, 95, 0.2);
+    border-radius: .9rem;
+    overflow: hidden;
+}
+
+.about__header {
+    margin-bottom: 10rem;
+    font-weight: 400;
+    font-size: 5rem;
+    line-height: 118%;
+    text-align: center;
+}
+
+/* Окрасить текст в линейный градиент */
+
+.about__header span {
+    background: linear-gradient(180deg, rgb(185, 1, 96), rgb(61, 91, 245));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.about__item-img {
+    width: 100%;
+    height: 21.5rem;
+}
+
+.about__item-img img {
+    object-fit: cover;
+}
+
+.about__item-description {
+    background: #FFFFFF;
+    padding: 5%;
+}
+
+.about__item-header {
+    font-weight: bold;
+    font-size: 3.6rem;
+    line-height: 117%;
+}
+
+.about__item-text {
+    color: #767676;
+    font-weight: 300;
+    font-size: 1.4rem;
+    line-height: 114%;
 }
 
 .footer__wrap li {
